--- a/schema.ini
+++ b/schema.ini
@@ -30,3 +30,31 @@ Col8=country Text Width 1073741822
 Col9=crit Text Width 1073741822
 Col10=shape_Length Double
 Col11=shape_Area Double
+[wh_base_intersect_attr.csv]
+Format=CSVDelimited
+ColNameHeader=True
+Col1=OBJECTID_12 Long
+Col2=wdpaid Long
+Col3=en_name Text Width 254
+Col4=fr_name Text Width 254
+Col5=status_yr Short
+Col6=rep_area Text Width 38
+Col7=gis_area Double
+Col8=country Text Width 254
+Col9=crit Text Width 254
+Col10=unesid Long
+Col11=FID_meow_meowv_pelagic_no_antarctica Long
+Col12=PROVINCE_P Text Width 50
+Col13=BIOME_P Text Width 30
+Col14=REALM_P Text Width 30
+Col15=ECO_CODE Double
+Col16=ECOREGION Text Width 50
+Col17=PROV_CODE Double
+Col18=PROVINCE Text Width 50
+Col19=RLM_CODE Double
+Col20=REALM Text Width 40
+Col21=ALT_CODE Double
+Col22=ECO_CODE_X Double
+Col23=category Text Width 50
+Col24=Shape_Length Double
+Col25=Shape_Area Double
